--- a/index.html
+++ b/index.html
@@ -153,6 +153,70 @@
 
         </section>
 
+
+        <section class="galary">
+            <div class="galary-img">
+                <img src="images/Rectangle 250.png" alt="">
+            </div>
+            <div class="galary-img">
+                <img src="images/Rectangle 250.png" alt="">
+            </div>
+            <div class="galary-img">
+                <img src="images/Rectangle 250.png" alt="">
+            </div>
+
+        </section>
+
+        <section class="help">
+            <div class="help-taxt">
+                <h2>Extend Your Hand of Charity. Earn </h2>
+                <h2>Rewards for the Hereafter</h2>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                    deterruisset. No duo populo animal noluisse, eni</p>
+            </div>
+
+        </section>
+
+        <section class="card-bottom-container">
+            <div class="card-bottom">
+                <img class="card-bottom-img" src="images/Rectangle 252.png" alt="">
+                <div class="card-desciption">
+                    <h4>Zakat Fund</h4>
+                    <p>Lorem ipsum dolor sit amet, usu
+                        cu esse possit referrentur, at eam
+                        falli deterruisset. No duo populo
+                        animal noluisse, enim</p>
+                    <a href="">Donate for jakat</a>
+
+                </div>
+            </div>
+            <div class="card-bottom">
+                <img class="card-bottom-img" src="images/Rectangle 252.png" alt="">
+                <div class="card-desciption">
+                    <h4>Zakat Fund</h4>
+                    <p>Lorem ipsum dolor sit amet, usu
+                        cu esse possit referrentur, at eam
+                        falli deterruisset. No duo populo
+                        animal noluisse, enim</p>
+                    <a href="">Donate for jakat</a>
+
+                </div>
+            </div>
+            <div class="card-bottom">
+                <img class="card-bottom-img" src="images/Rectangle 252.png" alt="">
+                <div class="card-desciption">
+                    <h4>Zakat Fund</h4>
+                    <p>Lorem ipsum dolor sit amet, usu
+                        cu esse possit referrentur, at eam
+                        falli deterruisset. No duo populo
+                        animal noluisse, enim</p>
+                    <a href="">Donate for jakat</a>
+
+                </div>
+            </div>
+
+        </section>
+
     </main>
 
 </body>
