--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Inter:wght@700&family=Montserrat:wght@700&family=Poppins&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Inter:wght@700&family=Lobster&family=Montserrat:wght@700&family=Poppins&display=swap"
         rel="stylesheet">
 </head>
 
@@ -220,5 +220,10 @@
     </main>
 
 </body>
+<footer>
+    <h2>Eid Ul Adha</h2>
+    <p>I’m gonna do it</p>
+
+</footer>
 
 </html>
